# genuy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
genuy/: genuy.py  uysolution.py
